--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,7 +69,7 @@ djlint = "^1.34.1"
 pyparsing = { extras = ["diagrams"], version = "^3.1.1" }
 isort = "^5.13.2"
 mypy = "^1.8.0"
-mkdocstrings = { extras = ["python"], version = "^0.24.1"}
+mkdocstrings = { extras = ["python"], version = "^0.24.1" }
 mkdocs-material = "^9.5.12"
 
 
@@ -169,6 +169,9 @@ profile = "jinja"
 
 [tool.isort]
 profile = "black"
+
+[tool.mypy]
+ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 markers = [
