--- a/pyproject.toml
+++ b/pyproject.toml
@@ -180,8 +180,10 @@ markers = [
     "performance: tests that are related to performance. Skipped by default.",
     "infix_parser: tests related to the infix parser.",
     "pyomo: tests related to pyomo models, their parsing, and evaluation.",
+    "nautili: tests related to the NAUTILI method",
+    "nautilus: tests related to the NAUTILUS method"
 ]
-addopts = "-m 'not performance'"
+addopts = "-m 'not performance' -m 'not nautilus'"
 
 [build-system]
 requires = ["poetry-core"]
