Differentiable variant of NIMBUS scalarization + schema.
Implemented the differentiable variant of the NIMBUS scalarization
function. Tested its initialization, need to test the correct
calculation of Pareto optimal solutions next. Some getters implemented
in the Problem schema as well, nice utilities. Changed some headrers in
the reference markdown files in the docs, did not get the need for the
change, was confusing. This is, however, debatable.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,9 +29,9 @@ nav:
       - "How to use the NAUTILUS Navigator method": "howtoguides/nautilus_navigator.md"
   - "API Reference":
       - "desdeo-problem": "api/desdeo_problem.md"
-      - "MCDM": "api/desdeo_mcdm.md"
-      - "EMO": "api/desdeo_emo.md"
-      - "Miscellaneous tools": "api/desdeo_tools.md"
+      - "desdeo-mcdm": "api/desdeo_mcdm.md"
+      - "desdeo-emo": "api/desdeo_emo.md"
+      - "desdeo-tools": "api/desdeo_tools.md"
       - "DESDEO REST API": "api/desdeo_api.md"
 
 theme:
