New test problem, bonmin solver tweaks.
Implemented a new MILP test problem with 3 objectives, but it is
apparent we need to be able to pass bonmin options if we want to solve
problems successfully. Need to work on this next.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,9 @@ nav:
       - "desdeo-tools": "api/desdeo_tools.md"
       - "DESDEO REST API": "api/desdeo_api.md"
 
+watch:
+  - desdeo
+
 theme:
   name: material
   features:
