--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,7 @@ isort = "^5.13.2"
 mypy = "^1.8.0"
 mkdocstrings = { extras = ["python"], version = "^0.24.1" }
 mkdocs-material = "^9.5.12"
+pytest-xdist = "^3.5.0"
 
 
 [tool.ruff]
