Testproblem, import, and doc changes.
Added and tested DTLZ2. Also fixed an issue, due to an erratic filter
options, where functions where omitted from the automatically generated
docs for no apparent reason. Some imports have also been fixed by
sorting them with isort, and fixing a circulat import in
pyomo_evaluator.py.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -80,7 +80,7 @@ plugins:
             show_category_heading: false
             show_symbol_type_heading: true
             show_symbol_type_doc: true
-            filters: none
+            filters: []
           docstring_options:
             ignore_init_summary: false
 
