--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ sqlalchemy-utils = { version = "^0.41.1", optional = true }
 python-multipart = { version = "^0.0.9", optional = true }
 python-jose = { extras = ["cryptography"], version = "^3.3.0", optional = true }
 bcrypt = { version = "^4.1.2", optional = true }
+mkdocs-include-markdown-plugin = {extras = ["cache"], version = "^6.0.5"}
 
 [tool.poetry.extras]
 standard = ["polars"]
