--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -106,6 +106,7 @@ platformdirs==4.2.0 ; python_version >= "3.12" and python_version < "4.0"
 plotly==5.18.0 ; python_version >= "3.12" and python_version < "4.0"
 pluggy==1.4.0 ; python_version >= "3.12" and python_version < "4.0"
 ply==3.11 ; python_version >= "3.12" and python_version < "4.0"
+polars==0.19.19 ; python_version >= "3.12" and python_version < "4.0"
 prometheus-client==0.19.0 ; python_version >= "3.12" and python_version < "4.0"
 prompt-toolkit==3.0.43 ; python_version >= "3.12" and python_version < "4.0"
 psutil==5.9.8 ; python_version >= "3.12" and python_version < "4.0"
