New MathJSON parser: sympy.
Implemented and tested a new parser that can parse expressions in the
MathJSON format to sympy expressions.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -181,6 +181,7 @@ markers = [
     "performance: tests that are related to performance. Skipped by default.",
     "infix_parser: tests related to the infix parser.",
     "pyomo: tests related to pyomo models, their parsing, and evaluation.",
+    "sympy: tests related to sympy expressions, their parsing, and evaluation.",
     "nautili: tests related to the NAUTILI method",
     "nautilus: tests related to the NAUTILUS method",
     "scalarization: tests related to scalarization functions",
