--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -20,6 +20,7 @@ cma==3.3.0 ; python_version >= "3.12" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0"
 comm==0.2.1 ; python_version >= "3.12" and python_version < "4.0"
 contourpy==1.2.0 ; python_version >= "3.12" and python_version < "4.0"
+coverage==7.4.4 ; python_version >= "3.12" and python_version < "4.0"
 cssbeautifier==1.14.11 ; python_version >= "3.12" and python_version < "4.0"
 cycler==0.12.1 ; python_version >= "3.12" and python_version < "4.0"
 debugpy==1.8.0 ; python_version >= "3.12" and python_version < "4.0"
@@ -121,6 +122,7 @@ pymdown-extensions==10.7.1 ; python_version >= "3.12" and python_version < "4.0"
 pyomo==6.7.1 ; python_version >= "3.12" and python_version < "4.0"
 pyparsing==3.1.1 ; python_version >= "3.12" and python_version < "4.0"
 pyparsing[diagrams]==3.1.1 ; python_version >= "3.12" and python_version < "4.0"
+pytest-testmon==2.1.1 ; python_version >= "3.12" and python_version < "4.0"
 pytest-xdist==3.5.0 ; python_version >= "3.12" and python_version < "4.0"
 pytest==7.4.4 ; python_version >= "3.12" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.12" and python_version < "4.0"
