--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ python-multipart = { version = "^0.0.9", optional = true }
 python-jose = { extras = ["cryptography"], version = "^3.3.0", optional = true }
 bcrypt = { version = "^4.1.2", optional = true }
 mkdocs-include-markdown-plugin = {extras = ["cache"], version = "^6.0.5"}
+gurobipy = "^11.0.1"
 
 [tool.poetry.extras]
 standard = ["polars"]
