--- a/pyproject.toml
+++ b/pyproject.toml
@@ -155,6 +155,9 @@ dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 # Assume Python 3.12.
 target-version = "py312"
 
+[tool.ruff.lint.mccabe]
+max-complexity = 15
+
 [tool.ruff.per-file-ignores]
 # Ignore certain rules in test files
 "tests/**/*.py" = [
