--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,7 +78,7 @@ pytest-xdist = "^3.5.0"
 # Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
 # Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
 # McCabe complexity (`C901`) by default.
-select = [
+lint.select = [
     "E",
     "F",
     "W",
@@ -107,18 +107,18 @@ select = [
     "I",
     "N",
 ]
-ignore = [
+lint.ignore = [
     "COM812",  # Enforcing trailing commas is too annoying.
     "PLR0915", # "too many statements (>50)"
     "T201",    # TODO: remove? it allow print statements
     "TRY003",  # allow long error messages
 ]
-pydocstyle.convention = "google"
+lint.pydocstyle.convention = "google"
 
 
 # Allow autofix for all enabled rules (when `--fix`) is provided.
-fixable = []
-unfixable = []
+lint.fixable = []
+lint.unfixable = []
 
 # Exclude a variety of commonly ignored directories.
 exclude = [
@@ -148,12 +148,12 @@ exclude = [
 line-length = 120
 
 # Allow unused variables when underscore-prefixed.
-dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 # Assume Python 3.12.
 target-version = "py312"
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 # Ignore certain rules in test files
 "tests/**/*.py" = [
     "S101",    # asserts allowed in tests...
