--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,6 @@
 annotated-types==0.6.0 ; python_version >= "3.12" and python_version < "4.0"
 anyio==3.7.1 ; python_version >= "3.12" and python_version < "4.0"
-appnope==0.1.3 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Darwin"
+appnope==0.1.4 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Darwin"
 argon2-cffi-bindings==21.2.0 ; python_version >= "3.12" and python_version < "4.0"
 argon2-cffi==23.1.0 ; python_version >= "3.12" and python_version < "4.0"
 arrow==1.3.0 ; python_version >= "3.12" and python_version < "4.0"
@@ -18,119 +18,123 @@ charset-normalizer==3.3.2 ; python_version >= "3.12" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.12" and python_version < "4.0"
 cma==3.3.0 ; python_version >= "3.12" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0"
-comm==0.2.1 ; python_version >= "3.12" and python_version < "4.0"
+comm==0.2.2 ; python_version >= "3.12" and python_version < "4.0"
 contourpy==1.2.0 ; python_version >= "3.12" and python_version < "4.0"
 coverage==7.4.4 ; python_version >= "3.12" and python_version < "4.0"
-cssbeautifier==1.14.11 ; python_version >= "3.12" and python_version < "4.0"
+cssbeautifier==1.15.1 ; python_version >= "3.12" and python_version < "4.0"
 cycler==0.12.1 ; python_version >= "3.12" and python_version < "4.0"
-debugpy==1.8.0 ; python_version >= "3.12" and python_version < "4.0"
+debugpy==1.8.1 ; python_version >= "3.12" and python_version < "4.0"
 decorator==5.1.1 ; python_version >= "3.12" and python_version < "4.0"
 defusedxml==0.7.1 ; python_version >= "3.12" and python_version < "4.0"
 djlint==1.34.1 ; python_version >= "3.12" and python_version < "4.0"
-editorconfig==0.12.3 ; python_version >= "3.12" and python_version < "4.0"
+editorconfig==0.12.4 ; python_version >= "3.12" and python_version < "4.0"
 execnet==2.0.2 ; python_version >= "3.12" and python_version < "4.0"
 executing==2.0.1 ; python_version >= "3.12" and python_version < "4.0"
 fastjsonschema==2.19.1 ; python_version >= "3.12" and python_version < "4.0"
-fonttools==4.47.2 ; python_version >= "3.12" and python_version < "4.0"
+fonttools==4.49.0 ; python_version >= "3.12" and python_version < "4.0"
 fqdn==1.5.1 ; python_version >= "3.12" and python_version < "4"
 ghp-import==2.1.0 ; python_version >= "3.12" and python_version < "4.0"
-griffe==0.41.3 ; python_version >= "3.12" and python_version < "4.0"
+griffe==0.42.0 ; python_version >= "3.12" and python_version < "4.0"
+gurobipy==11.0.1 ; python_version >= "3.12" and python_version < "4.0"
+h11==0.14.0 ; python_version >= "3.12" and python_version < "4.0"
 html-tag-names==0.1.2 ; python_version >= "3.12" and python_version < "4.0"
 html-void-elements==0.1.0 ; python_version >= "3.12" and python_version < "4.0"
+httpcore==1.0.4 ; python_version >= "3.12" and python_version < "4.0"
+httpx==0.27.0 ; python_version >= "3.12" and python_version < "4.0"
 idna==3.6 ; python_version >= "3.12" and python_version < "4.0"
 iniconfig==2.0.0 ; python_version >= "3.12" and python_version < "4.0"
-ipykernel==6.29.0 ; python_version >= "3.12" and python_version < "4.0"
-ipython==8.21.0 ; python_version >= "3.12" and python_version < "4.0"
+ipykernel==6.29.3 ; python_version >= "3.12" and python_version < "4.0"
+ipython==8.22.2 ; python_version >= "3.12" and python_version < "4.0"
 ipywidgets==8.1.2 ; python_version >= "3.12" and python_version < "4.0"
 isoduration==20.11.0 ; python_version >= "3.12" and python_version < "4.0"
 isort==5.13.2 ; python_version >= "3.12" and python_version < "4.0"
 jedi==0.19.1 ; python_version >= "3.12" and python_version < "4.0"
 jinja2==3.1.3 ; python_version >= "3.12" and python_version < "4.0"
 joblib==1.3.2 ; python_version >= "3.12" and python_version < "4.0"
-jsbeautifier==1.14.11 ; python_version >= "3.12" and python_version < "4.0"
-json5==0.9.14 ; python_version >= "3.12" and python_version < "4.0"
+jsbeautifier==1.15.1 ; python_version >= "3.12" and python_version < "4.0"
+json5==0.9.22 ; python_version >= "3.12" and python_version < "4.0"
 jsonpointer==2.4 ; python_version >= "3.12" and python_version < "4.0"
 jsonschema-specifications==2023.12.1 ; python_version >= "3.12" and python_version < "4.0"
 jsonschema==4.21.1 ; python_version >= "3.12" and python_version < "4.0"
 jsonschema[format-nongpl]==4.21.1 ; python_version >= "3.12" and python_version < "4.0"
-jupyter-client==8.6.0 ; python_version >= "3.12" and python_version < "4.0"
+jupyter-client==8.6.1 ; python_version >= "3.12" and python_version < "4.0"
 jupyter-console==6.6.3 ; python_version >= "3.12" and python_version < "4.0"
-jupyter-core==5.7.1 ; python_version >= "3.12" and python_version < "4.0"
-jupyter-events==0.9.0 ; python_version >= "3.12" and python_version < "4.0"
-jupyter-lsp==2.2.2 ; python_version >= "3.12" and python_version < "4.0"
-jupyter-server-terminals==0.5.2 ; python_version >= "3.12" and python_version < "4.0"
-jupyter-server==2.12.5 ; python_version >= "3.12" and python_version < "4.0"
+jupyter-core==5.7.2 ; python_version >= "3.12" and python_version < "4.0"
+jupyter-events==0.9.1 ; python_version >= "3.12" and python_version < "4.0"
+jupyter-lsp==2.2.4 ; python_version >= "3.12" and python_version < "4.0"
+jupyter-server-terminals==0.5.3 ; python_version >= "3.12" and python_version < "4.0"
+jupyter-server==2.13.0 ; python_version >= "3.12" and python_version < "4.0"
 jupyter==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
 jupyterlab-pygments==0.3.0 ; python_version >= "3.12" and python_version < "4.0"
-jupyterlab-server==2.25.2 ; python_version >= "3.12" and python_version < "4.0"
+jupyterlab-server==2.25.4 ; python_version >= "3.12" and python_version < "4.0"
 jupyterlab-widgets==3.0.10 ; python_version >= "3.12" and python_version < "4.0"
-jupyterlab==4.0.12 ; python_version >= "3.12" and python_version < "4.0"
+jupyterlab==4.1.4 ; python_version >= "3.12" and python_version < "4.0"
 kiwisolver==1.4.5 ; python_version >= "3.12" and python_version < "4.0"
 llvmlite==0.42.0 ; python_version >= "3.12" and python_version < "4.0"
 markdown==3.5.2 ; python_version >= "3.12" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.12" and python_version < "4.0"
 matplotlib-inline==0.1.6 ; python_version >= "3.12" and python_version < "4.0"
-matplotlib==3.8.2 ; python_version >= "3.12" and python_version < "4.0"
+matplotlib==3.8.3 ; python_version >= "3.12" and python_version < "4.0"
 mergedeep==1.3.4 ; python_version >= "3.12" and python_version < "4.0"
 mistune==3.0.2 ; python_version >= "3.12" and python_version < "4.0"
 mkdocs-autorefs==1.0.1 ; python_version >= "3.12" and python_version < "4.0"
 mkdocs-include-markdown-plugin[cache]==6.0.5 ; python_version >= "3.12" and python_version < "4.0"
 mkdocs-macros-plugin==1.0.5 ; python_version >= "3.12" and python_version < "4.0"
 mkdocs-material-extensions==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
-mkdocs-material==9.5.12 ; python_version >= "3.12" and python_version < "4.0"
+mkdocs-material==9.5.13 ; python_version >= "3.12" and python_version < "4.0"
 mkdocs==1.5.3 ; python_version >= "3.12" and python_version < "4.0"
-mkdocstrings-python==1.8.0 ; python_version >= "3.12" and python_version < "4.0"
+mkdocstrings-python==1.9.0 ; python_version >= "3.12" and python_version < "4.0"
 mkdocstrings==0.24.1 ; python_version >= "3.12" and python_version < "4.0"
 mkdocstrings[python]==0.24.1 ; python_version >= "3.12" and python_version < "4.0"
 mpmath==1.3.0 ; python_version >= "3.12" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
-mypy==1.8.0 ; python_version >= "3.12" and python_version < "4.0"
-nbclient==0.9.0 ; python_version >= "3.12" and python_version < "4.0"
-nbconvert==7.14.2 ; python_version >= "3.12" and python_version < "4.0"
-nbformat==5.9.2 ; python_version >= "3.12" and python_version < "4.0"
+mypy==1.9.0 ; python_version >= "3.12" and python_version < "4.0"
+nbclient==0.10.0 ; python_version >= "3.12" and python_version < "4.0"
+nbconvert==7.16.2 ; python_version >= "3.12" and python_version < "4.0"
+nbformat==5.10.2 ; python_version >= "3.12" and python_version < "4.0"
 nest-asyncio==1.6.0 ; python_version >= "3.12" and python_version < "4.0"
-nevergrad==1.0.1 ; python_version >= "3.12" and python_version < "4.0"
-notebook-shim==0.2.3 ; python_version >= "3.12" and python_version < "4.0"
-notebook==7.0.8 ; python_version >= "3.12" and python_version < "4.0"
+nevergrad==1.0.2 ; python_version >= "3.12" and python_version < "4.0"
+notebook-shim==0.2.4 ; python_version >= "3.12" and python_version < "4.0"
+notebook==7.1.1 ; python_version >= "3.12" and python_version < "4.0"
 numba==0.59.0 ; python_version >= "3.12" and python_version < "4.0"
-numpy==1.26.3 ; python_version >= "3.12" and python_version < "4.0"
+numpy==1.26.4 ; python_version >= "3.12" and python_version < "4.0"
 overrides==7.7.0 ; python_version >= "3.12" and python_version < "4.0"
-packaging==23.2 ; python_version >= "3.12" and python_version < "4.0"
+packaging==24.0 ; python_version >= "3.12" and python_version < "4.0"
 paginate==0.5.6 ; python_version >= "3.12" and python_version < "4.0"
-pandas==2.2.0 ; python_version >= "3.12" and python_version < "4.0"
+pandas==2.2.1 ; python_version >= "3.12" and python_version < "4.0"
 pandocfilters==1.5.1 ; python_version >= "3.12" and python_version < "4.0"
 parso==0.8.3 ; python_version >= "3.12" and python_version < "4.0"
 pathspec==0.12.1 ; python_version >= "3.12" and python_version < "4.0"
-pexpect==4.9.0 ; python_version >= "3.12" and python_version < "4.0" and sys_platform != "win32"
+pexpect==4.9.0 ; python_version >= "3.12" and python_version < "4.0" and (sys_platform != "win32" and sys_platform != "emscripten")
 pillow==10.2.0 ; python_version >= "3.12" and python_version < "4.0"
 platformdirs==4.2.0 ; python_version >= "3.12" and python_version < "4.0"
-plotly==5.18.0 ; python_version >= "3.12" and python_version < "4.0"
+plotly==5.20.0 ; python_version >= "3.12" and python_version < "4.0"
 pluggy==1.4.0 ; python_version >= "3.12" and python_version < "4.0"
 ply==3.11 ; python_version >= "3.12" and python_version < "4.0"
 polars==0.19.19 ; python_version >= "3.12" and python_version < "4.0"
-prometheus-client==0.19.0 ; python_version >= "3.12" and python_version < "4.0"
+prometheus-client==0.20.0 ; python_version >= "3.12" and python_version < "4.0"
 prompt-toolkit==3.0.43 ; python_version >= "3.12" and python_version < "4.0"
 psutil==5.9.8 ; python_version >= "3.12" and python_version < "4.0"
-ptyprocess==0.7.0 ; python_version >= "3.12" and python_version < "4.0" and (os_name != "nt" or sys_platform != "win32")
+ptyprocess==0.7.0 ; python_version >= "3.12" and python_version < "4.0" and (os_name != "nt" or sys_platform != "win32" and sys_platform != "emscripten")
 pure-eval==0.2.2 ; python_version >= "3.12" and python_version < "4.0"
-pyarrow==15.0.0 ; python_version >= "3.12" and python_version < "4.0"
+pyarrow==15.0.1 ; python_version >= "3.12" and python_version < "4.0"
 pycparser==2.21 ; python_version >= "3.12" and python_version < "4.0"
-pydantic-core==2.16.1 ; python_version >= "3.12" and python_version < "4.0"
-pydantic==2.6.0 ; python_version >= "3.12" and python_version < "4.0"
+pydantic-core==2.16.3 ; python_version >= "3.12" and python_version < "4.0"
+pydantic==2.6.4 ; python_version >= "3.12" and python_version < "4.0"
 pygments==2.17.2 ; python_version >= "3.12" and python_version < "4.0"
 pymdown-extensions==10.7.1 ; python_version >= "3.12" and python_version < "4.0"
 pyomo==6.7.1 ; python_version >= "3.12" and python_version < "4.0"
-pyparsing==3.1.1 ; python_version >= "3.12" and python_version < "4.0"
-pyparsing[diagrams]==3.1.1 ; python_version >= "3.12" and python_version < "4.0"
+pyparsing==3.1.2 ; python_version >= "3.12" and python_version < "4.0"
+pyparsing[diagrams]==3.1.2 ; python_version >= "3.12" and python_version < "4.0"
 pytest-testmon==2.1.1 ; python_version >= "3.12" and python_version < "4.0"
 pytest-xdist==3.5.0 ; python_version >= "3.12" and python_version < "4.0"
 pytest==7.4.4 ; python_version >= "3.12" and python_version < "4.0"
-python-dateutil==2.8.2 ; python_version >= "3.12" and python_version < "4.0"
+python-dateutil==2.9.0.post0 ; python_version >= "3.12" and python_version < "4.0"
 python-json-logger==2.0.7 ; python_version >= "3.12" and python_version < "4.0"
 python-markdown-math==0.8 ; python_version >= "3.12" and python_version < "4.0"
 pytz==2024.1 ; python_version >= "3.12" and python_version < "4.0"
 pywin32==306 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.12" and python_version < "4.0"
-pywinpty==2.0.12 ; python_version >= "3.12" and python_version < "4.0" and os_name == "nt"
+pywinpty==2.0.13 ; python_version >= "3.12" and python_version < "4.0" and os_name == "nt"
 pyyaml-env-tag==0.1 ; python_version >= "3.12" and python_version < "4.0"
 pyyaml==6.0.1 ; python_version >= "3.12" and python_version < "4.0"
 pyzmq==25.1.2 ; python_version >= "3.12" and python_version < "4.0"
@@ -142,31 +146,31 @@ regex==2023.12.25 ; python_version >= "3.12" and python_version < "4.0"
 requests==2.31.0 ; python_version >= "3.12" and python_version < "4.0"
 rfc3339-validator==0.1.4 ; python_version >= "3.12" and python_version < "4.0"
 rfc3986-validator==0.1.1 ; python_version >= "3.12" and python_version < "4.0"
-rpds-py==0.17.1 ; python_version >= "3.12" and python_version < "4.0"
-ruff==0.3.3 ; python_version >= "3.12" and python_version < "4.0"
+rpds-py==0.18.0 ; python_version >= "3.12" and python_version < "4.0"
+ruff==0.3.2 ; python_version >= "3.12" and python_version < "4.0"
 scikit-learn==1.4.1.post1 ; python_version >= "3.12" and python_version < "4.0"
 scipy==1.12.0 ; python_version >= "3.12" and python_version < "4.0"
 seaborn==0.13.2 ; python_version >= "3.12" and python_version < "4.0"
 send2trash==1.8.2 ; python_version >= "3.12" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.12" and python_version < "4.0"
-sniffio==1.3.0 ; python_version >= "3.12" and python_version < "4.0"
+sniffio==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
 soupsieve==2.5 ; python_version >= "3.12" and python_version < "4.0"
 stack-data==0.6.3 ; python_version >= "3.12" and python_version < "4.0"
 sympy==1.12 ; python_version >= "3.12" and python_version < "4.0"
 tenacity==8.2.3 ; python_version >= "3.12" and python_version < "4.0"
 termcolor==2.4.0 ; python_version >= "3.12" and python_version < "4.0"
-terminado==0.18.0 ; python_version >= "3.12" and python_version < "4.0"
+terminado==0.18.1 ; python_version >= "3.12" and python_version < "4.0"
 threadpoolctl==3.3.0 ; python_version >= "3.12" and python_version < "4.0"
 tinycss2==1.2.1 ; python_version >= "3.12" and python_version < "4.0"
 tornado==6.4 ; python_version >= "3.12" and python_version < "4.0"
-tqdm==4.66.1 ; python_version >= "3.12" and python_version < "4.0"
-traitlets==5.14.1 ; python_version >= "3.12" and python_version < "4.0"
-types-python-dateutil==2.8.19.20240106 ; python_version >= "3.12" and python_version < "4.0"
-typing-extensions==4.9.0 ; python_version >= "3.12" and python_version < "4.0"
-tzdata==2023.4 ; python_version >= "3.12" and python_version < "4.0"
+tqdm==4.66.2 ; python_version >= "3.12" and python_version < "4.0"
+traitlets==5.14.2 ; python_version >= "3.12" and python_version < "4.0"
+types-python-dateutil==2.8.19.20240311 ; python_version >= "3.12" and python_version < "4.0"
+typing-extensions==4.10.0 ; python_version >= "3.12" and python_version < "4.0"
+tzdata==2024.1 ; python_version >= "3.12" and python_version < "4.0"
 uri-template==1.3.0 ; python_version >= "3.12" and python_version < "4.0"
-urllib3==2.2.0 ; python_version >= "3.12" and python_version < "4.0"
-watchdog==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
+urllib3==2.2.1 ; python_version >= "3.12" and python_version < "4.0"
+watchdog==4.0.0 ; python_version >= "3.12" and python_version < "4.0"
 wcmatch==8.5.1 ; python_version >= "3.12" and python_version < "4.0"
 wcwidth==0.2.13 ; python_version >= "3.12" and python_version < "4.0"
 webcolors==1.13 ; python_version >= "3.12" and python_version < "4.0"
