Gurobipy solver changes.
Refactored the solver interface for Gurobipy to be a class instead of a
function returning a function. The solver is now initialized and used
as follows:

```
solver = GurobipySolver(problem)
result = solver.solve("f_1")
```

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,7 +74,7 @@ plugins:
             show_root_heading: true
             separate_signature: true
             heading_level: 2
-            merge_init_into_class: true
+            merge_init_into_class: false
             show_root_toc_entry: false
             group_by_category: true
             show_category_heading: false
