--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,8 +41,8 @@ sqlalchemy-utils = { version = "^0.41.1", optional = true }
 python-multipart = { version = "^0.0.9", optional = true }
 python-jose = { extras = ["cryptography"], version = "^3.3.0", optional = true }
 bcrypt = { version = "^4.1.2", optional = true }
-mkdocs-include-markdown-plugin = {extras = ["cache"], version = "^6.0.5"}
-gurobipy = "^11.0.1"
+mkdocs-include-markdown-plugin = { extras = ["cache"], version = "^6.0.5" }
+gurobipy = "^11.0.1"                                                             #96
 
 [tool.poetry.extras]
 standard = ["polars"]
