Polars evaluator and math parser:
- Updated Polars from 0.xx to version 1.xx. This brought significant
  performance changes and native support for numpy arrays and ufuncs.

- Refactored the "GenericEvaluator" to be the "PolarsEvaluator" to better
match its purpose. Refactored other references to "generic" in the names
of classes related to the PolarsEvaluator.

- Added support to random access to the math parser when parsing to polars
expressions. Tested.

- Started working on support for matrix and vectors operations for the
polars math parser.

- Ipopt solver will now load the given options.

- Support added for ufuncs and arrays. This means that problems
with tensor variables and/or tensor constants can now be parsed into
valid Polars expressions. Tested.

- Added new test case to test tensor constants and variables with
the Polars evaluator. Seems to work.

- Polars evaluator works with all test cases.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ python = "^3.12"
 # Math stuff
 numpy = "^1.26.2"
 scipy = "^1.11.4"
-polars = { version = "^0.19.19", optional = true }
+polars = "^1.0"
 polars-lts-cpu = { version = "^0.19.19", optional = true }
 pyarrow = "^15.0.0"
 numba = "^0.59.0"
@@ -204,6 +204,7 @@ markers = [
     "patterns: tests related to the publisher-subscriber pattern",
     "forest_problem: tests related to the forest problem examples.",
     "group_scalarization: tests related to group scalarization functions and utilities.",
+    "polars: test related to the polars evaluator and math parser.",
 ]
 pythonpath = "."
 
