--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -11,19 +11,19 @@ babel==2.16.0 ; python_version >= "3.12" and python_version < "4.0"
 bayesian-optimization==1.5.1 ; python_version >= "3.12" and python_version < "4.0"
 beautifulsoup4==4.12.3 ; python_version >= "3.12" and python_version < "4.0"
 bleach==6.1.0 ; python_version >= "3.12" and python_version < "4.0"
-bracex==2.5 ; python_version >= "3.12" and python_version < "4.0"
+bracex==2.5.post1 ; python_version >= "3.12" and python_version < "4.0"
 certifi==2024.8.30 ; python_version >= "3.12" and python_version < "4.0"
 cffi==1.17.1 ; python_version >= "3.12" and python_version < "4.0"
-charset-normalizer==3.3.2 ; python_version >= "3.12" and python_version < "4.0"
+charset-normalizer==3.4.0 ; python_version >= "3.12" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.12" and python_version < "4.0"
 cma==4.0.0 ; python_version >= "3.12" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0"
 comm==0.2.2 ; python_version >= "3.12" and python_version < "4.0"
 contourpy==1.3.0 ; python_version >= "3.12" and python_version < "4.0"
-coverage==7.6.1 ; python_version >= "3.12" and python_version < "4.0"
+coverage==7.6.3 ; python_version >= "3.12" and python_version < "4.0"
 cssbeautifier==1.15.1 ; python_version >= "3.12" and python_version < "4.0"
 cycler==0.12.1 ; python_version >= "3.12" and python_version < "4.0"
-debugpy==1.8.5 ; python_version >= "3.12" and python_version < "4.0"
+debugpy==1.8.7 ; python_version >= "3.12" and python_version < "4.0"
 decorator==5.1.1 ; python_version >= "3.12" and python_version < "4.0"
 defusedxml==0.7.1 ; python_version >= "3.12" and python_version < "4.0"
 djlint==1.35.2 ; python_version >= "3.12" and python_version < "4.0"
@@ -31,20 +31,21 @@ editorconfig==0.12.4 ; python_version >= "3.12" and python_version < "4.0"
 execnet==2.1.1 ; python_version >= "3.12" and python_version < "4.0"
 executing==2.1.0 ; python_version >= "3.12" and python_version < "4.0"
 fastjsonschema==2.20.0 ; python_version >= "3.12" and python_version < "4.0"
-fonttools==4.53.1 ; python_version >= "3.12" and python_version < "4.0"
+fonttools==4.54.1 ; python_version >= "3.12" and python_version < "4.0"
 fqdn==1.5.1 ; python_version >= "3.12" and python_version < "4"
 ghp-import==2.1.0 ; python_version >= "3.12" and python_version < "4.0"
-griffe==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
+griffe==1.4.1 ; python_version >= "3.12" and python_version < "4.0"
 gurobipy==11.0.3 ; python_version >= "3.12" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.12" and python_version < "4.0"
+hjson==3.1.0 ; python_version >= "3.12" and python_version < "4.0"
 html-tag-names==0.1.2 ; python_version >= "3.12" and python_version < "4.0"
 html-void-elements==0.1.0 ; python_version >= "3.12" and python_version < "4.0"
-httpcore==1.0.5 ; python_version >= "3.12" and python_version < "4.0"
+httpcore==1.0.6 ; python_version >= "3.12" and python_version < "4.0"
 httpx==0.27.2 ; python_version >= "3.12" and python_version < "4.0"
 idna==3.10 ; python_version >= "3.12" and python_version < "4.0"
 iniconfig==2.0.0 ; python_version >= "3.12" and python_version < "4.0"
 ipykernel==6.29.5 ; python_version >= "3.12" and python_version < "4.0"
-ipython==8.27.0 ; python_version >= "3.12" and python_version < "4.0"
+ipython==8.28.0 ; python_version >= "3.12" and python_version < "4.0"
 ipywidgets==8.1.5 ; python_version >= "3.12" and python_version < "4.0"
 isoduration==20.11.0 ; python_version >= "3.12" and python_version < "4.0"
 isort==5.13.2 ; python_version >= "3.12" and python_version < "4.0"
@@ -54,10 +55,10 @@ joblib==1.4.2 ; python_version >= "3.12" and python_version < "4.0"
 jsbeautifier==1.15.1 ; python_version >= "3.12" and python_version < "4.0"
 json5==0.9.25 ; python_version >= "3.12" and python_version < "4.0"
 jsonpointer==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
-jsonschema-specifications==2023.12.1 ; python_version >= "3.12" and python_version < "4.0"
+jsonschema-specifications==2024.10.1 ; python_version >= "3.12" and python_version < "4.0"
 jsonschema==4.23.0 ; python_version >= "3.12" and python_version < "4.0"
 jsonschema[format-nongpl]==4.23.0 ; python_version >= "3.12" and python_version < "4.0"
-jupyter-client==8.6.2 ; python_version >= "3.12" and python_version < "4.0"
+jupyter-client==8.6.3 ; python_version >= "3.12" and python_version < "4.0"
 jupyter-console==6.6.3 ; python_version >= "3.12" and python_version < "4.0"
 jupyter-core==5.7.2 ; python_version >= "3.12" and python_version < "4.0"
 jupyter-events==0.10.0 ; python_version >= "3.12" and python_version < "4.0"
@@ -72,7 +73,7 @@ jupyterlab==4.2.5 ; python_version >= "3.12" and python_version < "4.0"
 kiwisolver==1.4.7 ; python_version >= "3.12" and python_version < "4.0"
 llvmlite==0.43.0 ; python_version >= "3.12" and python_version < "4.0"
 markdown==3.7 ; python_version >= "3.12" and python_version < "4.0"
-markupsafe==2.1.5 ; python_version >= "3.12" and python_version < "4.0"
+markupsafe==3.0.1 ; python_version >= "3.12" and python_version < "4.0"
 matplotlib-inline==0.1.7 ; python_version >= "3.12" and python_version < "4.0"
 matplotlib==3.9.2 ; python_version >= "3.12" and python_version < "4.0"
 mergedeep==1.3.4 ; python_version >= "3.12" and python_version < "4.0"
@@ -80,16 +81,15 @@ mistune==3.0.2 ; python_version >= "3.12" and python_version < "4.0"
 mkdocs-autorefs==1.2.0 ; python_version >= "3.12" and python_version < "4.0"
 mkdocs-get-deps==0.2.0 ; python_version >= "3.12" and python_version < "4.0"
 mkdocs-include-markdown-plugin[cache]==6.2.2 ; python_version >= "3.12" and python_version < "4.0"
-mkdocs-macros-plugin==1.2.0 ; python_version >= "3.12" and python_version < "4.0"
+mkdocs-macros-plugin==1.3.6 ; python_version >= "3.12" and python_version < "4.0"
 mkdocs-material-extensions==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
-mkdocs-material==9.5.34 ; python_version >= "3.12" and python_version < "4.0"
+mkdocs-material==9.5.41 ; python_version >= "3.12" and python_version < "4.0"
 mkdocs==1.6.1 ; python_version >= "3.12" and python_version < "4.0"
-mkdocstrings-python==1.10.0 ; python_version >= "3.12" and python_version < "4.0"
-mkdocstrings==0.24.3 ; python_version >= "3.12" and python_version < "4.0"
-mkdocstrings[python]==0.24.3 ; python_version >= "3.12" and python_version < "4.0"
+mkdocstrings-python==1.12.1 ; python_version >= "3.12" and python_version < "4.0"
+mkdocstrings==0.26.2 ; python_version >= "3.12" and python_version < "4.0"
 mpmath==1.3.0 ; python_version >= "3.12" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
-mypy==1.11.2 ; python_version >= "3.12" and python_version < "4.0"
+mypy==1.12.0 ; python_version >= "3.12" and python_version < "4.0"
 nbclient==0.10.0 ; python_version >= "3.12" and python_version < "4.0"
 nbconvert==7.16.4 ; python_version >= "3.12" and python_version < "4.0"
 nbformat==5.10.4 ; python_version >= "3.12" and python_version < "4.0"
@@ -102,31 +102,31 @@ numpy==2.0.2 ; python_version >= "3.12" and python_version < "4.0"
 overrides==7.7.0 ; python_version >= "3.12" and python_version < "4.0"
 packaging==24.1 ; python_version >= "3.12" and python_version < "4.0"
 paginate==0.5.7 ; python_version >= "3.12" and python_version < "4.0"
-pandas==2.2.2 ; python_version >= "3.12" and python_version < "4.0"
+pandas==2.2.3 ; python_version >= "3.12" and python_version < "4.0"
 pandocfilters==1.5.1 ; python_version >= "3.12" and python_version < "4.0"
 parso==0.8.4 ; python_version >= "3.12" and python_version < "4.0"
 pathspec==0.12.1 ; python_version >= "3.12" and python_version < "4.0"
 pexpect==4.9.0 ; python_version >= "3.12" and python_version < "4.0" and (sys_platform != "win32" and sys_platform != "emscripten")
-pillow==10.4.0 ; python_version >= "3.12" and python_version < "4.0"
-platformdirs==4.3.3 ; python_version >= "3.12" and python_version < "4.0"
+pillow==11.0.0 ; python_version >= "3.12" and python_version < "4.0"
+platformdirs==4.3.6 ; python_version >= "3.12" and python_version < "4.0"
 plotly==5.24.1 ; python_version >= "3.12" and python_version < "4.0"
 pluggy==1.5.0 ; python_version >= "3.12" and python_version < "4.0"
 ply==3.11 ; python_version >= "3.12" and python_version < "4.0"
 polars==1.9.0 ; python_version >= "3.12" and python_version < "4.0"
-prometheus-client==0.20.0 ; python_version >= "3.12" and python_version < "4.0"
-prompt-toolkit==3.0.47 ; python_version >= "3.12" and python_version < "4.0"
+prometheus-client==0.21.0 ; python_version >= "3.12" and python_version < "4.0"
+prompt-toolkit==3.0.48 ; python_version >= "3.12" and python_version < "4.0"
 psutil==6.0.0 ; python_version >= "3.12" and python_version < "4.0"
 ptyprocess==0.7.0 ; python_version >= "3.12" and python_version < "4.0" and (os_name != "nt" or sys_platform != "win32" and sys_platform != "emscripten")
 pure-eval==0.2.3 ; python_version >= "3.12" and python_version < "4.0"
 pyarrow==17.0.0 ; python_version >= "3.12" and python_version < "4.0"
 pycparser==2.22 ; python_version >= "3.12" and python_version < "4.0"
-pydantic-core==2.23.3 ; python_version >= "3.12" and python_version < "4.0"
-pydantic==2.9.1 ; python_version >= "3.12" and python_version < "4.0"
+pydantic-core==2.23.4 ; python_version >= "3.12" and python_version < "4.0"
+pydantic==2.9.2 ; python_version >= "3.12" and python_version < "4.0"
 pygments==2.18.0 ; python_version >= "3.12" and python_version < "4.0"
-pymdown-extensions==10.9 ; python_version >= "3.12" and python_version < "4.0"
+pymdown-extensions==10.11.2 ; python_version >= "3.12" and python_version < "4.0"
 pyomo==6.8.0 ; python_version >= "3.12" and python_version < "4.0"
-pyparsing==3.1.4 ; python_version >= "3.12" and python_version < "4.0"
-pyparsing[diagrams]==3.1.4 ; python_version >= "3.12" and python_version < "4.0"
+pyparsing==3.2.0 ; python_version >= "3.12" and python_version < "4.0"
+pyparsing[diagrams]==3.2.0 ; python_version >= "3.12" and python_version < "4.0"
 pytest-asyncio==0.24.0 ; python_version >= "3.12" and python_version < "4.0"
 pytest-testmon==2.1.1 ; python_version >= "3.12" and python_version < "4.0"
 pytest-xdist==3.6.1 ; python_version >= "3.12" and python_version < "4.0"
@@ -135,7 +135,7 @@ python-dateutil==2.9.0.post0 ; python_version >= "3.12" and python_version < "4.
 python-json-logger==2.0.7 ; python_version >= "3.12" and python_version < "4.0"
 python-markdown-math==0.8 ; python_version >= "3.12" and python_version < "4.0"
 pytz==2024.2 ; python_version >= "3.12" and python_version < "4.0"
-pywin32==306 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.12" and python_version < "4.0"
+pywin32==308 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.12" and python_version < "4.0"
 pywinpty==2.0.13 ; python_version >= "3.12" and python_version < "4.0" and os_name == "nt"
 pyyaml-env-tag==0.1 ; python_version >= "3.12" and python_version < "4.0"
 pyyaml==6.0.2 ; python_version >= "3.12" and python_version < "4.0"
@@ -152,28 +152,29 @@ scikit-learn==1.5.2 ; python_version >= "3.12" and python_version < "4.0"
 scipy==1.14.1 ; python_version >= "3.12" and python_version < "4.0"
 seaborn==0.13.2 ; python_version >= "3.12" and python_version < "4.0"
 send2trash==1.8.3 ; python_version >= "3.12" and python_version < "4.0"
-setuptools==75.0.0 ; python_version >= "3.12" and python_version < "4.0"
+setuptools==75.2.0 ; python_version >= "3.12" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.12" and python_version < "4.0"
 snakeviz==2.2.0 ; python_version >= "3.12" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
 soupsieve==2.6 ; python_version >= "3.12" and python_version < "4.0"
 stack-data==0.6.3 ; python_version >= "3.12" and python_version < "4.0"
-sympy==1.13.2 ; python_version >= "3.12" and python_version < "4.0"
+super-collections==0.5.3 ; python_version >= "3.12" and python_version < "4.0"
+sympy==1.13.3 ; python_version >= "3.12" and python_version < "4.0"
 tenacity==9.0.0 ; python_version >= "3.12" and python_version < "4.0"
-termcolor==2.4.0 ; python_version >= "3.12" and python_version < "4.0"
+termcolor==2.5.0 ; python_version >= "3.12" and python_version < "4.0"
 terminado==0.18.1 ; python_version >= "3.12" and python_version < "4.0"
 threadpoolctl==3.5.0 ; python_version >= "3.12" and python_version < "4.0"
 tinycss2==1.3.0 ; python_version >= "3.12" and python_version < "4.0"
 tornado==6.4.1 ; python_version >= "3.12" and python_version < "4.0"
 tqdm==4.66.5 ; python_version >= "3.12" and python_version < "4.0"
 traitlets==5.14.3 ; python_version >= "3.12" and python_version < "4.0"
-types-python-dateutil==2.9.0.20240906 ; python_version >= "3.12" and python_version < "4.0"
+types-python-dateutil==2.9.0.20241003 ; python_version >= "3.12" and python_version < "4.0"
 typing-extensions==4.12.2 ; python_version >= "3.12" and python_version < "4.0"
-tzdata==2024.1 ; python_version >= "3.12" and python_version < "4.0"
+tzdata==2024.2 ; python_version >= "3.12" and python_version < "4.0"
 uri-template==1.3.0 ; python_version >= "3.12" and python_version < "4.0"
 urllib3==2.2.3 ; python_version >= "3.12" and python_version < "4.0"
-watchdog==5.0.2 ; python_version >= "3.12" and python_version < "4.0"
-wcmatch==9.0 ; python_version >= "3.12" and python_version < "4.0"
+watchdog==5.0.3 ; python_version >= "3.12" and python_version < "4.0"
+wcmatch==10.0 ; python_version >= "3.12" and python_version < "4.0"
 wcwidth==0.2.13 ; python_version >= "3.12" and python_version < "4.0"
 webcolors==24.8.0 ; python_version >= "3.12" and python_version < "4.0"
 webencodings==0.5.1 ; python_version >= "3.12" and python_version < "4.0"
