--- a/pyproject.toml
+++ b/pyproject.toml
@@ -214,6 +214,7 @@ markers = [
     "json: tests related to the Math JSON parser.",
     "schema: tests related to the Problem schema.",
     "utils: tests related to various utilities.",
+    "nogithub: tests that should not be run in GitHub actions.",
 
 ]
 pythonpath = "."
