--- a/.gitignore
+++ b/.gitignore
@@ -132,6 +132,9 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# webdev
+test.db
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
