Doc, schema, and util changes.
- Fixed the payoff table method to read the symbols from the Problem
  model instead of assuming that objective functions are defined with
  symbols "f_1", "f_2", etc...
- Fixed the Pyomo evaluator not deactivating old objective functions
  when adding new. This caused peculiar bugs...
- Added more advancd installation guide to the documentation.
- Added notebook with a worked examples on how to define and sovle a
  multiobjective optimization problem. The notebook is rendered in the
  documentation.
- Updated requirements (need to manually set nevergrad==1.0.5 until its
  dependency on colorama is fixed..." Only a problem when installing dev
  dependencies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,8 @@ pytest-testmon = "^2.1.1"
 snakeviz = "^2.2.0"
 pytest-asyncio = "^0.24.0"
 griffe = "^1.4.1"
+mkdocs-jupyter = "^0.25.1"
+jupytext = "^1.16.4"
 
 
 [tool.ruff]
