--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -85,6 +85,10 @@ plugins:
           docstring_options:
             ignore_init_summary: false
   - include-markdown
+  - mkdocs-jupyter:
+      execute: false
+      include_requirejs: true
+      custom_mathjax_url: "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS_CHTML-full,Safe"
 
 markdown_extensions:
   - admonition
