Changed mkdocs yml file to execute notebooks because it is required for plotly plots to appear correctly

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -86,7 +86,7 @@ plugins:
             ignore_init_summary: false
   - include-markdown
   - mkdocs-jupyter:
-      execute: false
+      execute: true
       include_requirejs: true
       custom_mathjax_url: "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS_CHTML-full,Safe"
 
