--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,10 +27,16 @@ nav:
       - "Evolutionary algorithms": "explanation/templates_and_pub_sub.ipynb"
   - "Guides":
       - "": "howtoguides/index.md"
+      - "How to install DESDEO": "howtoguides/installing.md"
       - "How to define a multiobjective optimization problem": "howtoguides/problem.md"
+      - "How to get started using DESDEO": "howtoguides/full_example.ipynb"
       - "How to host a DESDEO web application on Kubernetes": "howtoguides/kubernetes.md"
       - "How to run DESDEO's web API": "howtoguides/api.md"
       - "How to use the NAUTILUS Navigator method": "howtoguides/nautilus_navigator.md"
+      - "How to use the NAUTILI method": "howtoguides/nautili.md"
+      - "How to user evolutionary algorithms": "howtoguides/ea.ipynb"
+      - "How to define problems with surrogates": "howtoguides/advancedSurrogates.ipynb"
+      - "How to generate a representative set of solutions": "howtoguides/IPR.ipynb"
   - "API Reference":
       - "desdeo-problem": "api/desdeo_problem.md"
       - "desdeo-mcdm": "api/desdeo_mcdm.md"
